docs(readme): document how to add rift-java as a dependency
Add an Installation section to the README covering both publishing channels
(stable release on Maven Central, snapshots on the Central Portal snapshots
repo) for both Maven and Gradle, via the BOM. Includes the snapshots-repository
snippet that snapshot consumers must add (releases need none), and an embedded
module note pointing at the natives-classifier setup.

Update the stale status blockquote ("No artifacts are published yet") to reflect
that snapshots publish on every master commit and releases on each vX.Y.Z tag,
and cross-link the snapshot-repo requirement from the BOM README.